create div christmas-main + section tradition

--- a/index.html
+++ b/index.html
@@ -37,8 +37,46 @@
                     <i id="tree2" class="fa-solid fa-tree"></i>
                 </div>
                 <div class="bar"></div> 
+                <div id="christmas-main" class="flex-row aic">
+                    <div id="christmas-paragraph" class="flex-row jcc aic">
+                        <p>Christmas is a fairy time of the year where hope is everywhere. It's a time where you want to be reunited together with the ones you love.</p>
+                    </div>    
+                    <div id="christmas-img">
+                        <img src="./img/cute-renne.jpg" alt="renne">
+                    </div>                
+                </div>
             </section>
-
+            <section id="tradition" class="flex-column aic">
+                <div id="title-tradition">
+                    <h2>Tradition</h2>  
+                </div>                    
+                    <div id="container-traditions" class="flex-row aic">
+                        <div class="traditions">
+                            <div class="img-container">
+                                <img src="./img/tree.png" alt="christmas tree">
+                            </div>
+                            <div class="texte-trad">
+                                <p>The christmas tree must be there for christmas</p>
+                            </div>
+                        </div>
+                        <div class="traditions">
+                            <div class="img-container">
+                                <img src="./img/bredele.png" alt="">                                
+                            </div>
+                            <div class="texte-trad">
+                                <p>There is no christmas without Bredele</p>
+                            </div>
+                        </div>
+                        <div class="traditions">
+                            <div class="img-container">
+                            <img src="./img/gift.png" alt="">                                
+                            </div>
+                            <div class="texte-trad">
+                                <p>When Santa comes..there are always gifts</p>
+                            </div>
+                        </div>
+                    </div>
+            </section>
         </div>
 
         <footer>
