add icons + santa section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             <section id="tradition" class="flex-column aic">
                 <div id="title-tradition">
                     <h2>Tradition</h2>  
-                </div>                    
+                    <i id="candy1" class="fa-solid fa-candy-cane"></i>
+                    <i id="candy2" class="fa-solid fa-candy-cane"></i>
+                </div>     
+                <div class="bar"></div>                
                     <div id="container-traditions" class="flex-row aic">
                         <div class="traditions">
                             <div class="img-container">
@@ -76,6 +79,33 @@
                             </div>
                         </div>
                     </div>
+            </section>
+            <section id="santa" class="flex-column aic">
+                <div id="title-santa">
+                    <h2>Santa</h2>  
+                    <i id="gift1" class="fa-solid fa-gift"></i>
+                    <i id="gift2" class="fa-solid fa-gift"></i>                    
+                </div> 
+                <div class="bar"></div> 
+                <div id="santa-main" class="flex-column jcc">
+                    <h3>OH OH OH</h3>
+                    <div id="container-points" class="flex-row jcc">
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>                        
+                    </div>
+                </div>   
+                <div id="santa-bottom" class="flex-column aic jcc">
+                    <div id="container-img-santa">
+                    </div>
+                    <p>Santa crosses the world in the evening of the 24th december with his with his sleigh full of gifts and his eight reindeer </p>
+                    <p>If you have been kind, you will have plenty of gifts</p>
+                </div>
+                <div id="surprise">
+                    <div id="snow1"></div>
+                    <span id="snow2"></span>
+                    <span id="snow3"></span>
+                </div>
             </section>
         </div>
 
