add button burger

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <div id="container-page">
         <header>
-            <nav>
+            <nav id="menu-navigation">
                 <ul class="flex-row aic" id="nav-items">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#christmas">Christmas</a></li>
                     <li><a href="#tradition">Tradition</a></li>
                     <li><a href="#santa">Santa</a></li>
                 </ul>
+                <button class="burger">
+                    <span class="bar-burger"></span>
+                </button>
             </nav>
         </header>   
 
@@ -102,16 +105,20 @@
                     <p>If you have been kind, you will have plenty of gifts</p>
                 </div>
                 <div id="surprise">
-                    <div id="snow1"></div>
-                    <span id="snow2"></span>
-                    <span id="snow3"></span>
+                    <span id="snowflake1"></span>
+                    <span id="snowflake2"></span>
+                    <span id="snowflake3"></span>
+                    <span id="snowflake4"></span>
+                    <span id="snowflake5"></span>
+                    <span id="snowflake6"></span>
+                    <div id="snowman">
+                        <img src="img/snowman.png" alt="snowman">
+                    </div>                    
                 </div>
+
             </section>
         </div>
-
-        <footer>
-
-        </footer>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
